Fixing some spacing
FileUpload + Admin Check

--- a/design/custom.css
+++ b/design/custom.css
@@ -9758,3 +9758,11 @@ table thead tr td.BigCountDiscussions {
 .Connect {
   color: #FFF;
 }
+
+.CurrentUploader {
+  overflow:visible;
+}
+
+.AdminCheck {
+  margin-left: 5px;
+}
